fixes layout issue of inspector-option

--- a/ui/controls/inspector-option.reel/_inspector-option.css
+++ b/ui/controls/inspector-option.reel/_inspector-option.css
@@ -1,6 +1,9 @@
 .InspectorOption {
     outline: none;
-    margin: 0 -1rem;
+
+    @nest .Inspector-body & {
+        margin: 0 -1rem;
+    }
 
     & > * {
         border-top:     1px solid var(--transparent--lighten);
